# python-trading212

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publishing.yml
python_trading212/: __init__.py  models.py  trading212.py
pytrading212/: __init__.py  models.py  trading212.py
trading212/: __init__.py  models.py  trading212.py
