[tool.poetry]
name = "python-trading212"
version = "0.2.0"
description = "An unofficial client for the official Trading212 API"
authors = ["José Coelho <16445494+jcoelho93@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
